# cloudbit-software

./: .gitignore  CB.md  Cargo.toml  LICENSE  README.md  bruh.rs  build.sh  cloud_client  copy.bat  main.rs  pain.rs  reverse_engineering.md  test.py
.cargo/: config  config.toml
.github/workflows/: audit.yml  rust.yml
buildtools/: build.sh  copy.bat
files/: README.md  cloudclient.service  onBoot.sh  test.c
src/: conf.rs  main.rs  test.rs
src/hardware/: adc.rs  button.rs  dac.rs  led.rs  mod.rs
testServer/: index.js  package-lock.json  package.json  udp.js  ws.js
