[package]
name = "cloudbit-software"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
mac_address = "1.1.6"

[[bin]]
name = "cloud_client"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"
lto = "thin"