[package]
name = "cloudbit_software"
description = "alternate software for the littleBits cloudBit"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = true
repository = "https://github.com/littlebitsman/cloudbit-software"

exclude = ["/.cargo/*", "/.github/*", "/.gitignore", "/files/*", "/testServer/*", "/buildtools/*"]

[dependencies]
futures = "0.3.30"
libc = { version = "0.2.158", default-features = false }
mac_address = "1.1.7"
sysinfo = { version = "0.31.3", default-features = false, features = ["system"] }
serde_json = "1.0.25"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
url = "2.5.2"

[[bin]]
name = "cloud_client"
path = "src/main.rs"

# We really goin' for performance here!!
[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1
